2013-12-07  Andreas Kupries <andreask@activestate.com>

	* gtoken.man: Added mini manpages for the SASL mechanisms
	* ntlm.man: residing in their own packages. They mainly
	* scram.man: refer back to the main SASL documentation.

2013-12-06  Andreas Kupries <andreask@activestate.com>

	* ntlm.tcl: [Ticket 5030721806]: Applied the supplied diff,
	* ntlm.test: removed 'domain' flag from defaults for a Type 1
	* pkgIndex.tcl: greeting message. Updated testsuite. Bumped
	  version to 1.1.2

2013-12-06  Andreas Kupries  <andreask@activestate.com>

	* sasl.man: Ticket [b8f35b9883]. Added references for SCRAM mechanism
	* sasl.test: and package. Fixed missing cleanup of test variable.
	* scram.tcl: New package SASL::SCRAM and testsuite, provided
	* scram.test: by <sgolovan@nes.ru>

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-01-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sasl.tcl: Added support for the 'charset' parameter in DIGEST-MD5
	for gsasl servers which are picky about this.
	* sasl.tcl: digest-md5 noncecount parameter moved into context
	array so it is only used for maintained connections.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*